# mkdocs-material

./: README.md  package-lock.json  pyproject.toml  sitemap.xml
insiders/: index.html
insiders/changelog/: index.html
material/: base.html
material/assets/javascripts/: bundle.js  bundle.js.map
material/assets/javascripts/workers/: search.js  search.js.map
material/assets/stylesheets/: main.css  main.css.map  palette.css  palette.css.map
material/overrides/: main.html
material/overrides/assets/javascripts/: bundle.js  bundle.js.map
material/overrides/assets/stylesheets/: main.css  main.css.map
reference/code-blocks/: index.html
setup/setting-up-site-search/: index.html
